# yesterwind-bbs

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: doors-spec.md
src/yesterwind_bbs/: __init__.py  auth.py  cli.py  config.py  files.py  messages.py  server.py  session.py  splash.py  telnet.py
src/yesterwind_bbs/db/: __init__.py  engine.py  models.py
src/yesterwind_bbs/sysop/: console.py
src/yesterwind_bbs/terminal/: __init__.py  ansi.py  ascii.py  atascii.py  base.py  petscii.py
tests/: test_auth.py  test_files.py  test_messages.py  test_models.py  test_session.py  test_splash.py  test_sysop_console.py  test_telnet.py  test_terminal.py
